<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="username"
			type="String"/>

		<variable
			name="age"
			type="String"/>
	</data>

	<RelativeLayout
		android:id="@+id/root"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/colorPrimary">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			tools:ignore="UselessParent">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="16dp">

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:padding="16dp">

						<android.support.design.widget.TextInputLayout
							android:id="@+id/username_label"
							android:layout_width="match_parent"
							android:layout_height="84dp">

							<android.support.design.widget.TextInputEditText
								android:id="@+id/username"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/auth_username"
								android:inputType="text"
								android:text="@={ username }"/>
						</android.support.design.widget.TextInputLayout>

						<android.support.design.widget.TextInputLayout
							android:id="@+id/age_label"
							android:layout_width="match_parent"
							android:layout_height="84dp">

							<android.support.design.widget.TextInputEditText
								android:id="@+id/age"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:hint="@string/auth_edad"
								android:inputType="number"
								android:maxLength="2"
								android:text="@={ age }"/>
						</android.support.design.widget.TextInputLayout>

						<android.support.v7.widget.AppCompatButton
							android:id="@+id/access"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/auth_access"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>
			</RelativeLayout>
		</ScrollView>
	</RelativeLayout>
</layout>
