<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="creditRequest"
			type="org.shujito.ec.network.CreditRequest"/>
	</data>

	<RelativeLayout
		android:id="@+id/root"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
			android:id="@+id/app_bar_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:elevation="2dp">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:theme="@style/Theme.AppCompat"
				tools:subtitle="Subtitle"
				tools:title="Title"/>
		</android.support.design.widget.AppBarLayout>

		<android.support.design.widget.CoordinatorLayout
			android:id="@+id/coordinator_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@+id/app_bar_layout">

			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clipToPadding="false"
				android:paddingBottom="64dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingTop="8dp">

					<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="84dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp">

						<android.support.design.widget.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/new_request_amount"
							android:inputType="number"
							android:text="@={ creditRequest.amount }"/>
					</android.support.design.widget.TextInputLayout>

					<android.support.v7.widget.SwitchCompat
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:onCheckedChanged="@{ (v,b) -> creditRequest.setHasCreditCard(b) }"
						android:text="@string/new_request_credit_card"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:layout_marginTop="16dp"
						android:text="@string/new_request_payment_caption"
						android:textAppearance="?android:textAppearanceMedium"/>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:clipToPadding="false"
						android:padding="16dp">

						<android.support.v7.widget.CardView
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							app:cardElevation="4dp">

							<org.shujito.ec.SquareLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:clickable="true"
								android:focusable="true"
								android:foreground="?selectableItemBackground"
								android:onClick="@{ () -> creditRequest.setPaymentType(3) }">

								<ImageView
									android:layout_width="48dp"
									android:layout_height="48dp"
									android:layout_centerInParent="true"
									android:contentDescription="@string/app_name"
									android:scaleType="center"
									android:src="@drawable/ic_numeric_3_box_outline_48"/>

								<TextView
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_alignParentBottom="true"
									android:gravity="center"
									android:text="@string/new_request_months_label"
									android:textAppearance="?android:textAppearanceSmall"
									android:textSize="12sp"/>
							</org.shujito.ec.SquareLayout>
						</android.support.v7.widget.CardView>

						<android.support.v7.widget.CardView
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginLeft="8dp"
							android:layout_marginRight="8dp"
							android:layout_weight="1">

							<org.shujito.ec.SquareLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:clickable="true"
								android:focusable="true"
								android:foreground="?selectableItemBackground"
								android:onClick="@{ () -> creditRequest.setPaymentType(6) }">

								<ImageView
									android:layout_width="48dp"
									android:layout_height="48dp"
									android:layout_centerInParent="true"
									android:contentDescription="@string/app_name"
									android:scaleType="center"
									android:src="@drawable/ic_numeric_6_box_outline_48"/>

								<TextView
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_alignParentBottom="true"
									android:gravity="center"
									android:text="@string/new_request_months_label"
									android:textAppearance="?android:textAppearanceSmall"
									android:textSize="12sp"/>
							</org.shujito.ec.SquareLayout>
						</android.support.v7.widget.CardView>

						<android.support.v7.widget.CardView
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1">

							<org.shujito.ec.SquareLayout
								android:layout_width="match_parent"
								android:layout_height="0dp"
								android:clickable="true"
								android:focusable="true"
								android:foreground="?selectableItemBackground"
								android:onClick="@{ () -> creditRequest.setPaymentType(9) }">

								<ImageView
									android:layout_width="48dp"
									android:layout_height="48dp"
									android:layout_centerInParent="true"
									android:contentDescription="@string/app_name"
									android:scaleType="center"
									android:src="@drawable/ic_numeric_9_box_outline_48"/>

								<TextView
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_alignParentBottom="true"
									android:gravity="center"
									android:text="@string/new_request_months_label"
									android:textAppearance="?android:textAppearanceSmall"
									android:textSize="12sp"/>
							</org.shujito.ec.SquareLayout>
						</android.support.v7.widget.CardView>
					</LinearLayout>
				</LinearLayout>
			</ScrollView>

			<android.support.design.widget.FloatingActionButton
				android:id="@+id/floating_action_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom|end"
				android:layout_margin="@dimen/fab_margin"
				android:src="@drawable/ic_done"
				android:tint="@color/white"
				app:elevation="4dp"
				app:fabSize="normal"/>
		</android.support.design.widget.CoordinatorLayout>
	</RelativeLayout>
</layout>
